--- a/monodevelop/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.windows.fsproj
+++ b/monodevelop/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.windows.fsproj
@@ -67,6 +67,7 @@
     <EmbeddedResource Include="templates.FSharpTutorialProject.xpt.xml" />
     <EmbeddedResource Include="templates.FSharpGtkProject.xpt.xml" />
     <EmbeddedResource Include="templates.FSharpProjectMvc4Razor.xpt.xml" />    
+    <EmbeddedResource Include="templates.FSharpProjectMvc4Razor.windows.xpt.xml" />    
     <EmbeddedResource Include="templates.AssemblyInfo.xft.xml" />    
     <!--<EmbeddedResource Include="templates.FSharpMoonlightLibraryProject.xpt.xml" /> -->
     <EmbeddedResource Include="FSharpBinding.windows.addin.xml">
