--- a/monodevelop/MonoDevelop.FSharpBinding/Gui/MonoDevelop.FSharp.Gui.csproj
+++ b/monodevelop/MonoDevelop.FSharpBinding/Gui/MonoDevelop.FSharp.Gui.csproj
@@ -34,25 +34,20 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+    <Reference Include="pango-sharp">
       <HintPath>../../dependencies/gtk-sharp-2.0/pango-sharp.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+    <Reference Include="atk-sharp">
       <HintPath>../../dependencies/gtk-sharp-2.0/atk-sharp.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+    <Reference Include="gdk-sharp">
       <HintPath>../../dependencies/gtk-sharp-2.0/gdk-sharp.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+    <Reference Include="gtk-sharp">
       <HintPath>../../dependencies/gtk-sharp-2.0/gtk-sharp.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+    <Reference Include="glib-sharp">
       <HintPath>../../dependencies/gtk-sharp-2.0/glib-sharp.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </ItemGroup>
