[Ide] Added extern alias support for completion.

--- a/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
+++ b/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
@@ -227,7 +227,9 @@
     <Compile Include="MonoDevelop.Projects\DotNetProjectBinding.cs" />
     <Compile Include="MonoDevelop.Projects\DotNetProjectConfiguration.cs" />
     <Compile Include="MonoDevelop.Projects\Project.cs" />
-    <Compile Include="MonoDevelop.Projects\ProjectFile.cs" />
+    <Compile Include="MonoDevelop.Projects\ProjectFile.cs">
+      <DependentUpon>ProjectFile.cs</DependentUpon>
+    </Compile>
     <Compile Include="MonoDevelop.Projects\ProjectFileEventArgs.cs" />
     <Compile Include="MonoDevelop.Projects\ProjectReference.cs" />
     <Compile Include="MonoDevelop.Projects\ProjectReferenceEventArgs.cs" />
