[RazorTemplating] Add some new directivess
* Made "@model Type" work, generates a public auto property of
  given type called "Model".
* Added "@__name [NameSpace.]Name", to override class name
  and namespace.
* Added "@__access (public|internal)", to override class accessibility.
* Added "@__property Type Name", to generate a public auto property of
  given type and with given name. Multiple instances of this directive
  are allowed.

--- a/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
+++ b/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
@@ -94,11 +94,12 @@
     <Compile Include="RazorGenerator\CodeTransformers\SetTypeNamespace.cs" />
     <Compile Include="RazorGenerator\CodeTransformers\SetTypeVisibility.cs" />
     <Compile Include="RazorGenerator\RazorHost.cs" />
-    <Compile Include="RazorGenerator\TemplateCodeTransformer.cs" />
     <None Include="Templates\PreprocessedRazorTemplate.xft.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="RazorGenerator\RazorTemplatePreprocessor.cs" />
+    <Compile Include="RazorGenerator\PreprocessedCSharpRazorCodeParser.cs" />
+    <Compile Include="RazorGenerator\TemplateCodeTransformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
