[RazorTemplating] Rename processor class
So it matches the name we're using for the generator, instead of the
name of the class it was based on.

--- a/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
+++ b/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
@@ -99,7 +99,7 @@
     </None>
     <Compile Include="RazorGenerator\RazorTemplatePreprocessor.cs" />
     <Compile Include="RazorGenerator\PreprocessedCSharpRazorCodeParser.cs" />
-    <Compile Include="RazorGenerator\TemplateCodeTransformer.cs" />
+    <Compile Include="RazorGenerator\PreprocessedTemplateCodeTransformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
