[Razor] Factor out some code to faciliate re-use

--- a/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
+++ b/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
@@ -96,6 +96,7 @@
     <Compile Include="RazorEditorParserFixed\RazorResources.Designer.cs" />
     <Compile Include="RazorEditorParserFixed\CommonResources.Designer.cs" />
     <Compile Include="RazorEditorParserFixed\DisposableAction.cs" />
+    <Compile Include="RazorGenerator\PreprocessedRazorHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
