--- a/main/src/core/Mono.Texteditor/SyntaxModes/MakefileSyntaxMode.xml
+++ b/main/src/core/Mono.Texteditor/SyntaxModes/MakefileSyntaxMode.xml
@@ -25,7 +25,7 @@
 
 <SyntaxMode name = "Makefile" mimeTypes="text/x-makefile">
 	
-	<EolSpan color = "comment" rule ="InLocation" flags="StartsLine">#</EolSpan>
+	<EolSpan color = "Comment(Line)" rule ="InLocation" flags="StartsLine">#</EolSpan>
 	
 	<Span color = "Keyword(Other)" rule="InLocation" stopateol = "true">
 		<Begin>$(</Begin>
