makefile uses more variables, sets HOME to ./tmp

--- a/emacs/Makefile
+++ b/emacs/Makefile
@@ -1,16 +1,18 @@
-# Makefile variables,
-makefile_path = $(CURDIR)/$(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST))
-makefile_dir  = $(dir $(makefile_path))
+# Directories
+test_d = test/
+deps_d = deps/
+temp_d = tmp/
+HOME  := $(temp_d)
+export $(HOME)
 
 # Elisp files required for tests.
 src   = $(filter-out fsharp-mode-pkg.el, $(wildcard *.el))
-tests = $(filter-out ./test/integration-tests.el, $(wildcard ./test/*tests.el))
+tests = $(filter-out $(test_d)integration-tests.el, $(wildcard $(test_d)*tests.el))
 utils = test/test-common.el test/pos-tip-mock.el
 
 # Dependencies to be loaded.
-deps   = ./deps/
 ns_url = https://raw.github.com/chrisbarrett/elisp-namespaces/master/namespaces.el
-ns_script = $(deps)namespaces.el
+ns_script = $(deps_d)namespaces.el
 depends   = $(ns_script)
 
 # Emacs command format.
@@ -23,27 +25,25 @@ emacs_opts = --batch -f ert-run-tests-batch-and-exit
 
 .PHONY : env depends test unit-test integration-test
 
-env :
-	export HOME=$(makefile_dir)test/
-
 clean :
 	rm -f  *.elc
-	rm -fr deps
-	rm -f  tests/*.elc
-	rm -fr tests/.emacs.d
+	rm -fr $(deps_d)
+	rm -f  $(test_d)*.elc
+	rm -fr $(test_d).emacs.d
 
 # Dependencies
 
-depends      : $(deps) $(ns_script)
-$(deps)      :; mkdir -p $(deps)
+depends      : $(deps_d) $(ns_script)
+$(deps_d)    :; mkdir -p $(deps_d)
 $(ns_script) :; curl -# $(ns_url) > $(ns_script)
 
 # Tests
 
 test : unit-test integration-test
 
-unit-test : depends env
+unit-test : depends
 	$(emacs) $(load_files) $(load_tests) $(emacs_opts)
 
-integration-test : depends env
-	$(emacs) $(load_files) -l test/integration-tests.el $(emacs_opts)
+integration-test : depends
+	cd $(test_d)
+	$(emacs) $(load_files) -l $(test_d)integration-tests.el $(emacs_opts)
